--- a/Soical_Media_Insights.ipynb
+++ b/Soical_Media_Insights.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPONW9dKue0FOOPwJLmXQDd",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Nikhil5566/EDA-Insights-Repo/blob/main/Soical_Media_Insights.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -743,7 +755,7 @@
         "avg_day_engagement = df.groupby('post_day')['total_engagement'].mean()\n",
         "print(avg_day_engagement)\n",
         "\n",
-        "print('-------------------------------------------------------------')\n",
+        "print('--------------------------------------------------------------')\n",
         "\n",
         "df['post_hour'] = pd.to_datetime(df['post_time'],errors='coerce').dt.hour\n",
         "\n",
