--- a/Dogs_Breeds_Dataset_Insights.ipynb
+++ b/Dogs_Breeds_Dataset_Insights.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxNjuCA19t8K5Co0YUoznK",
+      "authorship_tag": "ABX9TyP7jwi4lrQttuNysRpT1w3n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 39,
       "metadata": {
         "id": "oA9GOimdeLtv"
       },
@@ -50,9 +50,9 @@
           "height": 206
         },
         "id": "7xW3-K0iefY3",
-        "outputId": "926d9418-8ada-4ffe-f459-66954c9c2111"
+        "outputId": "079431fb-bcc8-4122-ebcf-3b14ed650d4c"
       },
-      "execution_count": 2,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1d967c26-5de9-46b3-ace5-45f85f746440\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-cd749590-d089-4d10-9065-8a17f1fe0318\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -177,7 +177,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1d967c26-5de9-46b3-ace5-45f85f746440')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cd749590-d089-4d10-9065-8a17f1fe0318')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -229,12 +229,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1d967c26-5de9-46b3-ace5-45f85f746440 button.colab-df-convert');\n",
+              "        document.querySelector('#df-cd749590-d089-4d10-9065-8a17f1fe0318 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1d967c26-5de9-46b3-ace5-45f85f746440');\n",
+              "        const element = document.querySelector('#df-cd749590-d089-4d10-9065-8a17f1fe0318');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -254,8 +254,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-7760f0ed-7327-4104-9d1a-41c8ea9d59b9\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7760f0ed-7327-4104-9d1a-41c8ea9d59b9')\"\n",
+              "    <div id=\"df-176fe1e1-a0c1-4756-b37d-9602d8892ec0\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-176fe1e1-a0c1-4756-b37d-9602d8892ec0')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -374,7 +374,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-7760f0ed-7327-4104-9d1a-41c8ea9d59b9 button');\n",
+              "            document.querySelector('#df-176fe1e1-a0c1-4756-b37d-9602d8892ec0 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -391,7 +391,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 40
         }
       ]
     },
@@ -427,9 +427,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9h6cPENzetl2",
-        "outputId": "56601e57-e4c4-4d8d-d996-85d64324b7fd"
+        "outputId": "bfeb621b-7553-4d29-fbfb-5cedc2a4bf2c"
       },
-      "execution_count": 4,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,9 +450,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "knajfnAWho-Q",
-        "outputId": "4ca43c02-7ae5-4940-a708-94d8a303abf9"
+        "outputId": "381fe0c6-99c3-4b43-cf01-5907718c5b7a"
       },
-      "execution_count": 7,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,9 +473,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iViSN5prho7y",
-        "outputId": "a46437fa-e5b7-47a8-e0d0-82bdbb30bc3a"
+        "outputId": "b1a1b077-f1d2-48dd-852a-745454f18489"
       },
-      "execution_count": 9,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,9 +496,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kU0p4dXWho5F",
-        "outputId": "9393a3b3-f387-4d6a-d2b5-efd8329246aa"
+        "outputId": "4259f384-6728-4ad4-fa86-8c3d1490eb7b"
       },
-      "execution_count": 12,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -519,9 +519,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q1htrf7yho2c",
-        "outputId": "31801c72-97eb-4fe6-f0d0-d72fa3b67aea"
+        "outputId": "4435bc4f-5ac7-4f99-be2e-7cdccfbb4c5f"
       },
-      "execution_count": 15,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,9 +567,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UsRxHTGHf7KV",
-        "outputId": "52177865-f007-4ae2-d144-2da720649b13"
+        "outputId": "ce0dfb69-812c-4cbb-9e87-21a6c7a3e883"
       },
-      "execution_count": 30,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -598,9 +598,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bonmBGwKqKJq",
-        "outputId": "566ea852-0ef7-4929-cc9e-29b9c4fb7d2c"
+        "outputId": "e28c4b22-8b13-4380-b7a8-c92c21771af8"
       },
-      "execution_count": 43,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -634,9 +634,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vZ97zbCAqKHL",
-        "outputId": "40132c71-6f85-4df4-f909-addc1f59702a"
+        "outputId": "b8128c82-e898-4b35-f81d-37202c4e7a55"
       },
-      "execution_count": 54,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -675,9 +675,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LjE4AHCuxs27",
-        "outputId": "6430498c-529f-440f-a201-b55d5084ebe3"
+        "outputId": "4a57482e-f768-429c-b9be-8787901e949a"
       },
-      "execution_count": 59,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -711,9 +711,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "crSIusVGqKCA",
-        "outputId": "ea116bbb-1185-497a-a89b-4bb51529e99e"
+        "outputId": "bef286e8-5362-4ed5-d54b-3430bff77858"
       },
-      "execution_count": 66,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -764,9 +764,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZtG_QVjPgGgY",
-        "outputId": "ecca0041-9303-4409-89ea-704d66929727"
+        "outputId": "3e02fd9b-75e4-4171-f819-b45775d30bdc"
       },
-      "execution_count": 72,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -793,9 +793,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z2MEha7M1foH",
-        "outputId": "350dae76-695a-4331-9e90-83167f3423c2"
+        "outputId": "b1c9e74b-4eda-4c9b-a80d-b610ac10026b"
       },
-      "execution_count": 80,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -837,9 +837,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S4NjdihG1flZ",
-        "outputId": "c2b85979-6e39-4bab-b7eb-8455748f53a2"
+        "outputId": "97ed15cf-c6f7-4535-a2cb-cc624de61136"
       },
-      "execution_count": 84,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -864,9 +864,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XnTuqXlV1fi5",
-        "outputId": "f883c77e-09ba-49e3-af51-589c61b4c40f"
+        "outputId": "aceec0bc-ffcf-4cb0-b1e4-b2fb734de815"
       },
-      "execution_count": 89,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -894,9 +894,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1BWEla5h1fgl",
-        "outputId": "54571b3e-42a6-4aaa-adf5-c41e162294b6"
+        "outputId": "93fc2fc4-7bcf-445d-a81c-fda85b186007"
       },
-      "execution_count": 99,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -947,9 +947,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XkWpS52agP1L",
-        "outputId": "5b5b78d9-1af1-46af-853d-b98f43d3edeb"
+        "outputId": "e82f6a73-21d7-46e2-fd09-602c4145db95"
       },
-      "execution_count": 102,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -975,9 +975,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4fHWZOh3_aZZ",
-        "outputId": "e300f6c2-2453-4cf5-ca01-f98dd77e0646"
+        "outputId": "2c7371ac-9112-41a4-9221-fc1179a1bf04"
       },
-      "execution_count": 104,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -994,47 +994,98 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print('The average shedding level by breed group: \\n', df.groupby('breed_group')['shedding'].mean())\n",
+        "print('Group which has the highest average shedding :', df.groupby('breed_group')['shedding'].mean().idxmax())"
+      ],
       "metadata": {
-        "id": "d_mOvZ4h_aWk"
+        "id": "d_mOvZ4h_aWk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "63b24bf0-07db-4b6c-e074-da41d52ad7b2"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "nOmikJHg_aUE"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The average shedding level by breed group: \n",
+            " breed_group\n",
+            "herding         3.500000\n",
+            "hound           3.333333\n",
+            "non-sporting    2.000000\n",
+            "sporting        3.000000\n",
+            "toy             2.000000\n",
+            "working         3.200000\n",
+            "Name: shedding, dtype: float64\n",
+            "Group which has the highest average shedding : herding\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "df.columns"
+        "print('The average friendliness score for each origin country:\\n', df.groupby('origin_country')['friendliness'].mean())\n",
+        "print('Country with the highest average friendliness score:', df.groupby('origin_country')['friendliness'].mean().idxmax())"
+      ],
+      "metadata": {
+        "id": "nOmikJHg_aUE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7cf256e5-10e1-4ce1-eb38-b5f033389af7"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The average friendliness score for each origin country:\n",
+            " origin_country\n",
+            "Canada            5.000000\n",
+            "China             5.000000\n",
+            "England           4.500000\n",
+            "France            4.000000\n",
+            "Germany           4.166667\n",
+            "Germany/France    5.000000\n",
+            "Germany/Poland    4.000000\n",
+            "Malta             5.000000\n",
+            "Mexico            3.000000\n",
+            "Russia            4.000000\n",
+            "Scotland          5.000000\n",
+            "Name: friendliness, dtype: float64\n",
+            "Country with the highest average friendliness score: Canada\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('he barking frequency vary across breeds in the sporting group based on their size (small, medium, large):\\n', df[df['breed_group'] == 'sporting'].groupby('size')['barking'].mean())"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Vn947O6m1eG3",
-        "outputId": "34479e2a-bf3a-4c3e-96e3-cc693ce3fe23"
+        "id": "aK-8C1Pp-EzC",
+        "outputId": "87affd78-dd25-414a-c761-a87eca39e941"
       },
-      "execution_count": 90,
+      "execution_count": 67,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Index(['breed', 'size', 'energy_level', 'friendliness', 'trainability',\n",
-              "       'shedding', 'barking', 'lifespan', 'origin_country', 'breed_group'],\n",
-              "      dtype='object')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 90
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "he barking frequency vary across breeds in the sporting group based on their size (small, medium, large):\n",
+            " size\n",
+            "large    3.0\n",
+            "Name: barking, dtype: float64\n"
+          ]
         }
       ]
     },
@@ -1062,12 +1113,96 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print('The correlation between energy level and trainability across all breeds:', df['energy_level'].corr(df['trainability']))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ksoUATB-FKlg",
+        "outputId": "0ba1cf5a-4842-4f3b-9abe-e7e8c0c6055d"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The correlation between energy level and trainability across all breeds: 0.5874000266797793\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeric_cols = df.select_dtypes(include=np.number)\n",
+        "print('A stronger correlation between lifespan and friendliness in large breeds compared to small breeds:', numeric_cols[df['size'] == 'large'].corr().loc['lifespan','friendliness'] > numeric_cols[df['size'] == 'small'].corr().loc['lifespan','friendliness'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S9mIzB4bFKfm",
+        "outputId": "8f9a5592-976f-4152-d788-4d3ab79782a8"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A stronger correlation between lifespan and friendliness in large breeds compared to small breeds: False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "-GY0KK3ogXqL"
+        "id": "xbdCU7GJFKdS"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mvoB0kbeFKay"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.columns"
+      ],
+      "metadata": {
+        "id": "-GY0KK3ogXqL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4a48a681-3084-4187-c4f0-ba74bcba5d7f"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['breed', 'size', 'energy_level', 'friendliness', 'trainability',\n",
+              "       'shedding', 'barking', 'lifespan', 'origin_country', 'breed_group'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
     }
   ]
 }
